fix: resizing da tela ao abrir a sidebar, adicionado scripts para exibição e ocultação da sidebar

--- a/src/main/resources/templates/videoChamada.html
+++ b/src/main/resources/templates/videoChamada.html
@@ -38,6 +38,8 @@
     </div>
   </div>
 
+  <div id="sidebar-handle">&#x25B6;</div>
+
   <!-- ===== CONTEÚDO PRINCIPAL ===== -->
   <div class="main-container">
 
@@ -172,6 +174,8 @@
     window.onload = carregarPacientes;
 
   </script>
+
+  <script src="../static/menu.js"></script>
 
 </body>
 </html>
