--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -20,7 +20,7 @@
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
     <div class="logout">
       <a class="d-block text-center text-danger fw-bold" href="index.html">
@@ -37,15 +37,15 @@
     <p>Escolha uma opção abaixo:</p>
 
     <div class="card-grid">
-      <div class="card" onclick="location.href='agenda.html'">
+      <div class="card" onclick="location.href='calendario.html'">
         <i class="fa-regular fa-calendar"></i>
         <p>Agendamento</p>
       </div>
-      <div class="card" onclick="location.href='terapeuta-chat.html'">
+      <div class="card" onclick="location.href='chat.html'">
         <i class="fa-regular fa-comment"></i>
         <p>Chat</p>
       </div>
-      <div class="card" onclick="location.href='perfil-servicos.html'">
+      <div class="card" onclick="location.href='avaliacao.html'">
         <i class="fa-regular fa-star"></i>
         <p>Avaliação</p>
       </div>
