--- a/src/main/resources/templates/videoChamada.html
+++ b/src/main/resources/templates/videoChamada.html
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+  
 
   <!-- ===== SIDEBAR ===== -->
   <div class="sidebar">
@@ -26,7 +27,7 @@
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
       <li><a href="cadastroCliente.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
       <li><a href="cadastro.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
-      <li><a href="perfil-servicos.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
+      <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html" class="active"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
