--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -6,12 +6,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style/menu.css" rel="stylesheet">
-  <!-- Ícones do Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 <body>
-  <!-- Sidebar -->
   <div class="sidebar">
     <div class="brand">MindEasy</div>
     <ul>
@@ -20,7 +18,7 @@
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
     <div class="logout">
       <a class="d-block text-center text-danger fw-bold" href="index.html">
@@ -29,10 +27,7 @@
     </div>
   </div>
 
-  <div id="sidebar-handle">&#x25B6;</div> <!-- seta -->
-
-  <!-- Main content -->
-  <div class="main">
+  <div id="sidebar-handle">&#x25B6;</div> <div class="main">
     <h2>Bem-vindo ao MindEasy</h2>
     <p>Escolha uma opção abaixo:</p>
 
@@ -57,5 +52,5 @@
   </div>
 
   <script src="../static/menu.js"></script>
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+}
