corrigido problemas de navegação devido a referencias desatualizadas

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -32,19 +32,19 @@
     <p>Escolha uma opção abaixo:</p>
 
     <div class="card-grid">
-      <div class="card" onclick="location.href='agenda.html'">
+      <div class="card" onclick="location.href='calendario.html'">
         <i class="fa-regular fa-calendar"></i>
         <p>Agendamento</p>
       </div>
-      <div class="card" onclick="location.href='terapeuta-chat.html'">
+      <div class="card" onclick="location.href='chat.html'">
         <i class="fa-regular fa-comment"></i>
         <p>Chat</p>
       </div>
-      <div class="card" onclick="location.href='perfil-servicos.html'">
+      <div class="card" onclick="location.href='perfilTerapeuta.html'">
         <i class="fa-regular fa-star"></i>
         <p>Avaliação</p>
       </div>
-      <div class="card" onclick="location.href='agenda.html'">
+      <div class="card" onclick="location.href='calendario.html'">
         <i class="fa-regular fa-calendar-check"></i>
         <p>Remarcar Consulta</p>
       </div>
