--- a/src/main/resources/templates/calendario.html
+++ b/src/main/resources/templates/calendario.html
@@ -24,7 +24,7 @@
     <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
     <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
     <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-    <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+    <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
   </ul>
   <div class="logout">
     <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Sair</a>
