--- a/src/main/resources/templates/perfilTerapeuta.html
+++ b/src/main/resources/templates/perfilTerapeuta.html
@@ -21,7 +21,7 @@
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
     <div class="logout">
       <a class="d-block text-center text-danger fw-bold" href="index.html">
