fix: corrigido campo incorreto no cadastro de pacientes corrigda autenticação para pacientes

--- a/src/main/resources/templates/cadastroCliente.html
+++ b/src/main/resources/templates/cadastroCliente.html
@@ -23,7 +23,7 @@
                     <option value="OUTRO">Outro</option>
                 </select>
                 <input type="email" id="emailCadastro" placeholder="Email" required />
-                <input type="tel" id="telefone" placeholder="Telefone" required />
+                <input type="date" id="dataNascimento" placeholder="Data de Nascimento" required />
                 <input type="password" id="senhaCadastro" placeholder="Senha" required />
                 <button type="submit" id="cadastroButton">Cadastrar</button>
 
@@ -58,6 +58,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../static/cadastro.js"></script>
+    <script src="/cadastroCliente.js"></script>
 </body>
 </html>
