fix: icones de navegacao e caminhos incorretos

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,11 +14,11 @@
     <div class="brand">MindEasy</div>
     <ul>
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="cadastro.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
     <div class="logout">
       <a class="d-block text-center text-danger fw-bold" href="index.html">
@@ -40,9 +40,9 @@
         <i class="fa-regular fa-comment"></i>
         <p>Chat</p>
       </div>
-      <div class="card" onclick="location.href='avaliacao.html'">
-        <i class="fa-regular fa-star"></i>
-        <p>Avaliação</p>
+      <div class="card" onclick="location.href='dashboard.html'">
+        <i class="fa-solid fa-chart-line"></i>
+        <p>Dashboard</p>
       </div>
       <div class="card" onclick="location.href='calendario.html'">
         <i class="fa-regular fa-calendar-check"></i>
