--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -14,11 +14,11 @@
     <div class="brand">MindEasy</div>
     <ul>
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="cadastro.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
 
     <div class="logout">
