fix: correção de cor do icone de saída na sidebar

--- a/src/main/resources/templates/avaliacao.html
+++ b/src/main/resources/templates/avaliacao.html
@@ -27,7 +27,7 @@
       <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
     <div class="logout">
-      <a class="d-block text-center text-danger fw-bold" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
