--- a/src/main/resources/style/menu.css
+++ b/src/main/resources/style/menu.css
@@ -62,7 +62,7 @@ body {
 }
 
 .sidebar ul li a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     padding: 12px 20px;
     display: flex;
