--- a/src/main/resources/templates/calendario.html
+++ b/src/main/resources/templates/calendario.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendário</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
   <!-- CSS -->
   <link rel="stylesheet" href="../style/calendario.css">
 
@@ -26,7 +29,9 @@
     <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
   </ul>
   <div class="logout">
-    <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Sair</a>
+    <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
+      <i class="fa-solid fa-right-from-bracket"></i> Sair</a>
+    </a>
   </div>
 </div>
 
