--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Chat – MindEasy</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <link rel="stylesheet" href="../style/chat.css">
@@ -16,13 +18,12 @@
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
-      <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
       <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
 
     <div class="logout">
-      <a class="d-block text-center text-danger fw-bold" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
