--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Dashboard – MindEasy</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <link rel="stylesheet" href="../style/dashboard.css" />
   <!-- Font Awesome (ícones) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -23,7 +26,7 @@
     </ul>
 
     <div class="logout">
-      <a class="d-block text-center text-danger fw-bold" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
