--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,13 +15,12 @@
     <ul>
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
       <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
-      <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
       <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
     <div class="logout">
-      <a class="d-block text-center text-danger fw-bold" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
