--- a/src/main/resources/templates/perfilTerapeuta.html
+++ b/src/main/resources/templates/perfilTerapeuta.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil do Terapeuta</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../style/perfilTerapeuta.css">
@@ -17,13 +19,13 @@
     <div class="brand">MindEasy</div>
     <ul>
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
     <div class="logout">
-      <a class="d-block text-center text-danger fw-bold" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
