--- a/src/main/resources/templates/videoChamada.html
+++ b/src/main/resources/templates/videoChamada.html
@@ -25,15 +25,14 @@
     <div class="brand">MindEasy</div>
     <ul>
       <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="cadastroCliente.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
-      <li><a href="cadastro.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
+      <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
       <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="videoChamada.html" class="active"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="dashboard.html"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
     </ul>
 
     <div class="logout">
-      <a class="d-block text-center" href="index.html">
+      <a class="d-block text-center text-danger fw-bold" href="cadastro.html">
         <i class="fa-solid fa-right-from-bracket"></i> Sair
       </a>
     </div>
