feat: adicionadas rotas pro chat e calendario no peril do terapeuta

--- a/src/main/resources/templates/perfilTerapeuta.html
+++ b/src/main/resources/templates/perfilTerapeuta.html
@@ -44,8 +44,8 @@
           <p>Descrição breve do perfil</p>
         </div>
         <div class="profile-actions">
-          <button class="btn-custom btn-secondary-custom">Enviar Mensagem</button>
-          <button class="btn-custom btn-primary-custom">Agendar Consulta</button>
+         <a href="chat.html" class="btn-custom btn-primary-custom">Enviar Mensagem</a>
+          <a href="calendario.html" class="btn-custom btn-primary-custom">Agendar Consulta</a>
         </div>
       </div>
       
