chat com fotos dos clientes, perfil do terapeuta atualização de cores dos botões, foto, descrição e sobre ele. Atualizações na pagina de chat e terapeuta.

--- a/src/main/resources/style/perfilTerapeuta.css
+++ b/src/main/resources/style/perfilTerapeuta.css
@@ -4,8 +4,8 @@
     --text-color-primary: #101828;
     --text-color-secondary: #475467;
     --text-color-light: #667085;
-    --primary-color: #003cff;
-    --primary-color-hover: #003cff;
+    --primary-color: #2685BF;
+    --primary-color-hover: #2685BF;
     --font-family: 'Inter', sans-serif;
 }
 
